--- a/assets/css/admin_ssj.css
+++ b/assets/css/admin_ssj.css
@@ -1,4 +1,4 @@
-@charset "utf-8"; /*common*/
+@charset "utf-8";/*common*/
 .box-round8 { border-radius: 8px; } 
 .vert-top { vertical-align: top; } 
 
@@ -20,8 +20,7 @@ header.admin_header { width: 100%; background: #222222; height: 80px; padding: 0
 
 /** FOOTER **/
 footer.footer { width: 100%; height: 66px; text-align: left; background: #fff; border-top: 1px solid #EEEFF5; } 
-.footer_div { width: 1440px; height: inherit; margin: 0 auto; padding: 19px 0 19px 400px; position: relative}
-
+.footer_div { width: 1440px; height: inherit; margin: 0 auto; padding: 19px 0 19px 400px; position: relative } 
 .foot_logo { width: 106px; height: 28px; position: absolute; left: 40px; top: 19px; } 
 .footer_div .address { font-size: 12px; color: #858B93; } 
 .footer_div .copyright { font-size: 11px; color: #B5B9C0; } 
@@ -54,8 +53,7 @@ footer.footer { width: 100%; height: 66px; text-align: left; background: #fff; b
 .Wrap_tree_cont .r_Box .box-white .title .imgBox img { } 
 .Wrap_tree_cont .r_Box .box-white .title .txtbox { display: flex; gap: 6px; flex-direction: column; flex-grow: 1; width: calc(100% - 66px); } 
 .Wrap_tree_cont .r_Box .box-white .title .txtbox .head20B { width: 100%; word-break: break-all; } 
-.Wrap_tree_cont .r_Box .box-white .title .txtbox .breadcrumb { /* margin-top:10px; */}
-
+.Wrap_tree_cont .r_Box .box-white .title .txtbox .breadcrumb { /* margin-top:10px; */ } 
 .Wrap_tree_cont .r_Box .box-white .box-in-form { display: flex; flex-wrap: wrap; } 
 .Wrap_tree_cont .r_Box .box-white .box-in-form li { margin-top: 0; width: 50%; } 
 .Wrap_tree_cont .r_Box .box-white .box-in-form li.w100 { width: 100%; } 
@@ -125,8 +123,7 @@ footer.footer { width: 100%; height: 66px; text-align: left; background: #fff; b
 .docu_sort_list .docuBox_drag .docuNmBox .docuNm .btn_edit { width: 24px; height: 24px; background: url(../images_admin/ico-edit-pencil.svg) no-repeat center; text-indent: -999px; overflow: hidden; opacity: 0; } 
 .docu_sort_list .docuBox_drag:hover .docuNmBox .docuNm .btn_edit { opacity: 1; } 
 .docu_sort_list .docuBox_drag .docuNmBox:hover .docuNm .btn-edit { } 
-.docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox { display: none; flex-grow: 1; align-items: center; gap: 10px}
-
+.docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox { display: none; flex-grow: 1; align-items: center; gap: 10px } 
 .docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox.active { display: flex; flex-grow: 1; justify-content: space-between; gap: 10px; align-items: center; } 
 .docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox .ipt_div { display: flex; flex-grow: 1; } 
 .docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox .btn_div { width: 60px; display: flex; justify-content: space-between; padding-right: 3px; } 
@@ -135,3 +132,42 @@ footer.footer { width: 100%; height: 66px; text-align: left; background: #fff; b
 .docu_sort_list .docuBox_drag .docuNmBox .docuNmEditBox .btn_div .btn_reset { background: url(../images_admin/ico-edit-reset.svg) no-repeat center; } 
 .docu_sort_list .docuBox_drag.editIng .docuNmBox .docuNm { display: none; } 
 .docu_sort_list .docuBox_drag.editIng .docuNmBox .docuNmEditBox { display: flex; } 
+
+
+
+
+/* 평가 항목 추가 : 004 */
+.add_eval_wrap { width: 100%; } 
+.add_eval_wrap .btn-addeval { width: 100%; height: 52px; background: #FAFAFC; color: #2264DC; margin-bottom: 16px; } 
+.add_eval_wrap .btn-addeval:after { content: ""; width: 36px; height: 36px; background: url(../images_admin/ico_plus.svg) no-repeat center; display: inline-block; vertical-align: middle; margin-left: 16px; } 
+.add_eval_wrap .add_eval_div { counter-reset: orderedlist; } 
+.add_eval_wrap .add_eval_div .eval_box { border: 1px solid #BCC2D6; background: #FAFAFC; display: grid; align-items: start; padding: 10px; position: relative; border-radius: 4px; } 
+.add_eval_wrap .add_eval_div .eval_box + .eval_box { margin-top: 16px; } 
+.add_eval_wrap .add_eval_div .eval_box::before { counter-increment: orderedlist; content: counter(orderedlist); width: 40px; height: 40px; line-height: 40px; text-align: center; color: #fff; background-color: #1D4676; border-radius: 100%; position: absolute; left: 26px; top: 22px; font-size: 16px; font-weight: 600; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_NmBox { display: flex; justify-content: space-between; align-items: center; padding: 8px 16px 16px 72px; border-bottom: 1px solid #D2D7E5; gap: 16px; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_NmBox .ipt_div { display: flex; flex-grow: 1; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_NmBox .btn-del { width: 24px; height: 24px; background: url(../images_admin/ico_trashbtn.svg) no-repeat center; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_cont { padding: 8px 0 0; display: flex; flex-direction: column; gap: 4px; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_cont>li { display: flex; align-items: center; gap: 16px; justify-content: space-between; padding: 8px 16px; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_cont>li .btn_move { width: 40px; height: 40px; border: 1px solid #8E97B4; border-radius: 4px; text-indent: -999px; overflow: hidden; position: relative; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_cont>li .btn_move:before { content: "";  background:url(../images_admin/drag_handle.svg);  background-color: #4F5A7E; 
+    -webkit-mask-image: url(../images_admin/drag_handle.svg);
+    -webkit-mask-repeat: no-repeat; 
+    -webkit-mask-position: center center; 
+    -webkit-mask-size: 16px; 
+    -webkit-mask-size: 16px; 
+    text-indent: 0; position: absolute; left: 0; top: 0; width: 100%; height: 100%; } 
+.add_eval_wrap .add_eval_div .eval_box .eval_cont>li .ipt_div { display: flex; flex-grow: 1; } 
+.add_eval_wrap .add_eval_div .eval_box .btn_div { justify-content: flex-end; padding: 8px 50px; } 
+
+/* 딤드(dimmed) 상태인경우 */
+.add_eval_wrap .add_eval_div.dimmed { } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box::before { background: #D2D7E5; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .eval_NmBox .btn-del { opacity: 0; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .eval_NmBox .ipt_div input:placeholder-shown + .btn_del_keyword {opacity:1;}
+.add_eval_wrap .add_eval_div.dimmed input[type='text'] { border-color: #EEEFF5; background: #F4F5F8; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .eval_cont>li .btn_move { border-color: #D2D7E5; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .eval_cont>li .btn_move:before { color: #D2D7E5; background-color: #D2D7E5; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .eval_cont>li .btn-del { opacity: 0.2; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .btn_div .btn-darkgray { background-color: var(--Grayscale-100); border-color: var(--Grayscale-100); cursor: default; } 
+.add_eval_wrap .add_eval_div.dimmed .eval_box .btn_div .btn-darkgray span { color: var(--Grayscale-200); } 
